@@ -1,6 +1,20 @@
-Then /^I should see "([^\"]*)" in the tree$/ do |rows|
+
+# Doesn't work because expandToLevel takes a DirMirror Node not a tree item. So we need some way
+# to get Nodes from treeitems?
+When /^I expand the tree row "([^\"]*)"$/ do |row|
+  item = top_tree.items.detect {|item| item.getText == row }
+  viewer = Redcar.app.focussed_window.treebook.trees.last.controller.viewer
+  node = viewer.getViewerRowFromItem(item).getElement
+  viewer.expandToLevel(node, 1)
+end
+
+Then /^I should (not )?see "([^\"]*)" in the tree$/ do |bool, rows|
+  bool = !bool
+  matcher = bool ? be_true : be_false
   rows = rows.split(",").map {|r| r.strip}
   rows.each do |row|
-    top_tree.items.include?(row).should be_true
+    on_top = top_tree.item_texts.include?(row)
+    on_2 = top_tree.items.any? {|item| item.getItems.to_a.any? {|sub_item| sub_item.getText == row } }
+    on_top or on_2
   end
 end
