@@ -137,6 +137,7 @@ module Redcar
     
     # Focus the Window.
     def focus
+      treebook.refresh_trees
       notify_listeners(:focussed, self)
     end
 
