@@ -7,7 +7,8 @@ Enhancements:
   * Keybindings to switch tabs and notebooks.
   * Undo/redo.
   * Home/end keys.
-
+  * Modified tabs have little stars before their names.
+  * Directory tree refreshes on window focus.
 
 Version 0.3.0dev (25 Dec 2009)
 ==============================
